# PaintAndRecognition-opencv-tf

./: CMakeLists.txt  README.md
model_creator/: cnn_model_creator.py  linear_model_creator.py
python/: predict_cnn.py  predict_linear.py
src/: kcftracker.cpp  kcftracker.hpp  knn_character_recognition.cpp  knn_character_recognition.h  main.cpp  python_tf_minst.cpp  python_tf_minst.h  svm_character_recognition.cpp  svm_character_recognition.h  tracker.h
